# serverless-hs

./: .gitignore  LICENSE  Makefile  handler.js  handler.py  package.yaml  serverless-hs.cabal  stack.yaml  test.dhall  test.js  test.yaml
app/: Deploy.hs  Main.hs  Types.hs
app/Control/Monad/Trans/: Monologue.hs
app/Types/: Args.hs
examples/: Simple.hs  examples.cabal  package.yaml  stack.yaml
scripts/: test-e2e.sh  test-local.sh
src/: Lib.hs  Types.hs
src/Web/: Serverless.hs
src/Web/Serverless/: Handler.hs  Types.hs
src/Web/Serverless/AWS/: Deploy.hs
src/Web/Serverless/Internal/: Constants.hs  Handler.hs  SocketApp.hs  Spec.hs  Types.hs
src/Web/Serverless/Internal/Types/: Args.hs
src/Web/Serverless/Types/: Args.hs
static/: handler.js
test/: handler.js
