name:                serverless-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/utdemir/serverless-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          utdemir@gmail.com
copyright:           GPL3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Types
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , chan-split
                     , deepseq
                     , mtl
                     , safe-exceptions
                     , attoparsec
                     , aeson-casing
                     , lens
                     , pipes
                     , pipes-parse
  default-language:    Haskell2010

executable serverless-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--                       -static -optl-static -optl-pthread -fPIC
  build-depends:       base
                     , serverless-hs
                     , amazonka
  default-language:    Haskell2010

test-suite serverless-hs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , serverless-hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/utdemir/serverless-hs
