name:                serverless-hs
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/utdemir/serverless-hs#readme
license:             BSD3
license-file:        LICENSE
author:              Utku Demir
maintainer:          utdemir@gmail.com
copyright:           GPL3
category:            Network
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Serverless
  other-modules:       Web.Serverless.Handler
                     , Web.Serverless.Types
                     , Web.Serverless.Types.Args
  build-depends:       aeson
                     , async
                     , base >= 4.7 && < 5
                     , bytestring
                     , chan-split
                     , deepseq
                     , mtl
                     , safe-exceptions
                     , attoparsec
                     , aeson-casing
                     , system-filepath
                     , optparse-generic
                     , text
  default-language:    Haskell2010

executable serverless-hs
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--                       -static -optl-static -optl-pthread -fPIC
  build-depends:       base
                     , serverless-hs
                     , zip-archive
                     , file-embed
                     , text
                     , directory
                     , process
                     , split
                     , stratosphere
                     , yaml
                     , amazonka
                     , amazonka-core
                     , amazonka-cloudformation
                     , amazonka-s3
                     , aeson-casing
                     , exceptions
                     , lens
                     , ansi-terminal
                     , resourcet
                     , transformers
                     , filepath
                     , bytestring
                     , system-filepath
                     , optparse-generic
                     , aeson
                     , safe-exceptions
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/utdemir/serverless-hs
