name:                examples
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/examples#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable simple
  main-is:             Simple.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -static -optl-static -optl-pthread -fPIC
  build-depends:       base
                     , serverless-hs
                     , aeson
  default-language:    Haskell2010
